--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,183 @@ body{
     font-size: 1.1rem;
     color: #fff;
     width: 165px;
-    margin-top: 40px;
+    margin-top: 25px;
     margin-left: 16px;
     line-height: 1.7;
 }
+
+#card #heart1{
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+    -webkit-animation: closeLeft 2s ease-in-out forwards;
+    -moz-animation: closeLeft 2s ease-in-out forwards;
+    -ms-animation: closeLeft 2s ease-in-out forwards;
+    animation: closeLeft 2s ease-in-out forwards;
+}
+
+#card #heart2{
+    -webkit-animation: closeRight 2s ease-in-out forwards;
+    -moz-animation: closeRight 2s ease-in-out forwards;
+    -ms-animation: closeRight 2s ease-in-out forwards;
+    animation: closeRight 2s ease-in-out forwards;
+}
+
+#card:hover #heart1{
+    -webkit-animation: openLeft 2s ease-in-out forwards;
+    -moz-animation: openLeft 2s ease-in-out forwards;
+    -ms-animation: openLeft 2 ease-in-out forwards;
+    animation: openLeft 2s ease-in-out forwards;
+}
+
+#card:hover #heart2{
+    -webkit-animation: openRight 2s ease-in-out forwards;
+    -moz-animation: openRight 2s ease-in-out forwards;
+    -ms-animation: openRight 2 ease-in-out forwards;
+    animation: openRight 2s ease-in-out forwards;
+}
+
+@-webkit-keyframes closeLeft{
+    from{
+        -webkit-transform: rotateY(0deg);
+    }
+    to{
+        -webkit-transform:rotateY(180deg);
+    }
+}
+
+@-moz-keyframes closeLeft{
+    from{
+        -moz-transform: rotateY(0deg);
+    }
+    to{
+        -moz-transform:rotateY(180deg);
+    }
+}
+
+@-ms-keyframes closeLeft{
+    from{
+        -ms-transform: rotateY(0deg);
+    }
+    to{
+        -ms-transform:rotateY(180deg);
+    }
+}
+
+@keyframes closeLeft{
+    from{
+        transform: rotateY(0deg);
+    }
+    to{
+        transform:rotateY(180deg);
+    }
+}
+
+@-webkit-keyframes openLeft{
+    from{
+        -webkit-transform: rotateY(180deg);
+    }
+    to{
+        -webkit-transform:rotateY(0deg);
+    }
+}
+
+@-moz-keyframes openLeft{
+    from{
+        -moz-transform: rotateY(180deg);
+    }
+    to{
+        -moz-transform:rotateY(0deg);
+    }
+}
+
+@-ms-keyframes openLeft{
+    from{
+        -ms-transform: rotateY(180deg);
+    }
+    to{
+        -ms-transform:rotateY(0deg);
+    }
+}
+
+@keyframes openLeft{
+    from{
+        transform: rotateY(180deg);
+    }
+    to{
+        transform:rotateY(0deg);
+    }
+}
+
+
+@-webkit-keyframes openRight{
+    0%{
+        -webkit-transform: rotateX(180deg);
+    }
+    100%{
+        -webkit-transform:rotateX(0deg) rotateZ(180deg);
+    }
+}
+
+@-moz-keyframes openRight{
+    0%{
+        -moz-transform: rotateX(180deg);
+    }
+    100%{
+        -moz-transform:rotateX(0deg) rotateZ(180deg);
+    }
+}
+
+@-ms-keyframes openRigth{
+    0%{
+        -ms-transform: rotateX(180deg);
+    }
+    100%{
+        -ms-transform:rotateX(0deg) rotateZ(180deg);
+    }
+}
+
+@keyframes openRight{
+    0%{
+        transform: rotateX(180deg);
+    }
+    100%{
+        transform:rotateX(0deg) rotateZ(180deg);
+    }
+}
+
+@-webkit-keyframes closeRight{
+    from{
+        -webkit-transform: rotateX(0deg) rotate(180deg);
+    }
+    to{
+        -webkit-transform: rotateX(180deg);
+    }
+}
+@-moz-keyframes closeRight{
+    from{
+        -moz-transform: rotateX(0deg) rotate(180deg);
+    }
+    to{
+        -moz-transform: rotateX(180deg);
+    }
+}
+@-ms-keyframes closeRight{
+    from{
+        -ms-transform: rotateX(0deg) rotate(180deg);
+    }
+    to{
+        -ms-transform: rotateX(180deg);
+    }
+}
+
+@keyframes closeRight{
+    from{
+        transform: rotateX(0deg) rotate(180deg);
+    }
+    to{
+        transform: rotateX(180deg);
+    }
+}
+
